<?xml version="1.0"?>
<package format="2">
  <name>hw4</name>
  <version>0.0.1</version>
  <description>CS6301 HW4, package for controlling a robot's gripper and performing grasp actions in a Gazebo environment.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>gazebo_msgs</depend>
  <depend>trac_ik_python</depend>

  <export>
  </export>
</package>
